syntax = "proto3";

package sum;

option go_package = "gRPC/calculator/proto/generated";

message SumRequest {
  int32 first_number = 1;
  int32 second_number = 2;
}

message SumResponse {
  int32 result = 1;
}

message PrimeDecompositionRequest {
  int32 number = 1;
}

message PrimeDecompositionResponse {
  int32 number = 1;
}

message AvgRequest {
  int32 number = 1;
}

message AvgResponse {
  int32 number = 1;
}

message MaxNumberRequest {
  int32 number = 1;
}

message MaxNumberResponse {
  int32 number = 1;
}

service Calculator {
  rpc Sum (SumRequest) returns (SumResponse);
  rpc PrimeDecomposer (PrimeDecompositionRequest) returns (stream PrimeDecompositionResponse);
  rpc AverageRequest (stream AvgRequest) returns (AvgResponse);
  rpc MaxNumber (stream MaxNumberRequest) returns (stream MaxNumberResponse);
}